spade-tests/src/snapshots/spade_tests__typeinference__concatenation_errors_look_good.snap
---
source: spade-tests/src/typeinference.rs
---
mod std{mod conv{ 
    fn concat<#N, #M, #K>(x: int<N>, y: int<M>) -> int<K> __builtin__
}}
entity counter(x: int<4>, y:int<3>) -> int<8> {
    x `std::conv::concat` y
}


error: Type error
  ┌─ testinput:4:47
  │  
4 │   entity counter(x: int<4>, y:int<3>) -> int<8> {
  │                                          ------ int<8> type specified here
  │ ╭───────────────────────────────────────────────^
5 │ │     x `std::conv::concat` y
6 │ │ }
  │ ╰─^ Found type int<7>
  │  
  = Expected: 8
  =       in: int<8>
  =      Got: 7
  =       in: int<7>


