spade-tests/src/snapshots/spade_tests__typeinference__good_error_message_for_reg_with_explicit_type.snap
---
source: spade-tests/src/typeinference.rs
---
entity test(clk: clock) -> bool {
    reg(clk) (sample_i, audio_val): (int<9>, int<16>) = {
        true
    };

    true
}


error: Expected type (int<9>, int<16>), got bool
  ┌─ testinput:2:57
  │  
2 │       reg(clk) (sample_i, audio_val): (int<9>, int<16>) = {
  │ ╭─────────────────────────────────────────────────────────^
3 │ │         true
4 │ │     };
  │ ╰─────^ Expected (int<9>, int<16>)
  │  
  = note: Expected (int<9>, int<16>)
               Got bool


